--- a/style.css
+++ b/style.css
@@ -83,6 +83,34 @@ main {
     margin: 0 auto;   
 }
 
+.submitpage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.submitpage > h1 {
+    text-align: center;
+    max-width: 250px;
+    margin: 1em auto;
+}
+
+.submitpage button {
+    border: none;
+    padding: .8em 1.5em;
+    border-radius: .4em;
+    cursor: pointer;
+    text-align: center;
+    background-color: var(
+        --interaction-color
+    );
+    color: var(--button-color);
+}
+
+.submitpage button:hover {
+    background-color: var(--hover-color);
+}
+
 form {
     z-index: 1;
     max-width: 500px;
@@ -125,17 +153,14 @@ input[type="email"]{
 }
 
 
-input[type="text"]:not(:focus):not(:placeholder-shown):invalid {
+#studentinfo input[type="text"]:not(:focus):not(:placeholder-shown):invalid {
     border-bottom: 2px solid var(--invalid-color);
 }
 
-input[type="text"]:not(:focus):not(:placeholder-shown):valid {
+#studentinfo input[type="text"]:not(:focus):not(:placeholder-shown):valid {
     border-bottom: 2px solid var(--valid-color);
 }
 
-input[type="radio"] {
-    opacity: 0;  
-}
 
 form label:has(input:checked) {
     background-color: var(--interaction-color);
@@ -155,6 +180,7 @@ form label:has(input:checked) {
     display: flex;
     background-color: var(--secondary-color);
     cursor: pointer;
+    flex-direction: column;
 }
 
 .radioset label:hover,
@@ -172,12 +198,15 @@ form label:has(input:checked) {
     border-radius: 0 .8em .8em 0;
 }
 
+
+
 .radioset label span {
+    z-index: 1;
+    text-align: center;
     position: absolute;
     top:50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    z-index: 1;
 }
 
 input[type="submit"] {
@@ -191,7 +220,7 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-button {
+form button {
     background-color: var(
         --interaction-color
     );
@@ -203,7 +232,7 @@ button {
     cursor: pointer;
 }
 
-button:hover,
+form button:hover,
 input[type="submit"]:hover {
     background-color: var(--hover-color);
 }
@@ -251,10 +280,60 @@ body:has(#hcd:valid) nav ul li:nth-of-type(6) {
     scroll-margin-top: 7em;
 }
 
-@supports not selector(:has(*)) {
+input[type="radio"] {
+    appearance: none;
+    position: absolute;
+    bottom: -1em;
+    width: 100%;
+    height: .8em; 
+    border-top: 1px solid var(--main-color);
+    cursor: pointer;
+}
+
+input[type="radio"]:checked,
+input[type="radio"]:hover {
+    background-color: var(--interaction-color);
+}
+
+form > section {
+    display: flex;
+    gap: 1em;
+}
+
+
+@supports selector(:has(*)) {
     input[type="radio"] {
-        opacity: 1;  
+        opacity: 0;  
     }
+}
+
+@supports not (appearance: none) {
+    input[type="radio"] {
+        height: 100%;
+        bottom: 0;
+        top: 0;
+        display: block;
+    }
+
+    .radioset label { 
+        height: 3em;
+    }
+
+    .radioset label span { 
+        height: 1em; 
+        display: block;
+        margin: 0 auto;
+        top:.5em;
+    }
+
+    input[type="radio"]:checked,
+    input[type="radio"]:hover {
+        background-color: var(--secondary-color);
+    }
+
+   .radioset label input[type="radio"]:hover  {
+        background-color: var(--interaction-color);
+   }
 }
 
 @media screen and (min-width: 500px) {
